# independent_backend_python

./: .dockerignore  .env  .env.example  .env.production.example  .example.env  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  QUICK_REFERENCE.md  SERVER_DEPLOYMENT.md  SERVER_QUICK_COMMANDS.md  deploy.sh  docker-compose.yml  list-deploy-files.sh  pyproject.toml  update.sh
app/: main.py
app/api/ai/: v1.py
app/api/article/: v1.py
app/api/recipient/: v1.py
app/api/system/: systemApi.py
app/models/: ai.py  article.py  system.py
app/models/tables/: databaseTables.py
app/repositories/: aiRepo.py  articleRepo.py  chatRepo.py  recipientRepo.py  systemRepo.py
app/services/: aiServ.py  articleServ.py  recipientServ.py
app/utils/: auth.py  chatbot.py  config.py  crawler.py  database.py  log.py  mail.py
