[project]
name = "independent-backend-python"
version = "0.1.0"
description = "基于FastApi的独立后端服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "markdown>=3.10.1",
    "openai>=2.24.0",
    "psycopg[binary]>=3.2.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.27",
    "volcengine-python-sdk[ark]>=5.0.9",
]
